add Haskell type for MT blocks

--- a/mersenne-random-pure64.cabal
+++ b/mersenne-random-pure64.cabal
@@ -35,6 +35,7 @@ flag small_base
 library
     exposed-modules: System.Random.Mersenne.Pure64
                      System.Random.Mersenne.Pure64.Base
+                     System.Random.Mersenne.Pure64.MTBlock
     extensions:      CPP, ForeignFunctionInterface
 
     if flag(small_base)
