--- a/mersenne-random-pure64.cabal
+++ b/mersenne-random-pure64.cabal
@@ -25,7 +25,7 @@ copyright:       (c) 2008. Don Stewart <dons@galois.com>
 author:          Don Stewart
 maintainer:      Don Stewart <dons@galois.com>
 cabal-version: >= 1.2.0
-build-type:      Configure
+build-type:      Simple
 tested-with:     GHC ==6.8.2
 
 flag small_base
