--- a/mersenne-random-pure64.cabal
+++ b/mersenne-random-pure64.cabal
@@ -21,9 +21,9 @@ description:
 category:        Math, System
 license:         BSD3
 license-file:    LICENSE
-copyright:       (c) 2008. Don Stewart <dons@galois.com>
+copyright:       (c) 2008. Don Stewart <dons00@gmail.com>
 author:          Don Stewart
-maintainer:      Don Stewart <dons@galois.com>
+maintainer:      Don Stewart <dons00@gmail.com>
 cabal-version:   >= 1.2.0
 build-type:      Simple
 tested-with:     GHC == 6.8.3
