--- a/mersenne-random-pure64.cabal
+++ b/mersenne-random-pure64.cabal
@@ -26,7 +26,7 @@ author:          Don Stewart
 maintainer:      Don Stewart <dons00@gmail.com>
 cabal-version:   >= 1.6.0
 build-type:      Simple
-tested-with:     GHC == 7.6.2, GHC == 7.7
+tested-with:     GHC == 7.6.2, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
 
 source-repository head
   type: git
